--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://culesiter.github.io/bank-credit",
   "name": "learning-react",
   "version": "0.1.0",
   "private": true,
@@ -15,6 +16,7 @@
     "concurrently": "^5.2.0",
     "convertkit-react": "^1.4.2",
     "cors": "^2.8.5",
+    "gh-pages": "^4.0.0",
     "handlebars": "^4.7.7",
     "i18next": "^21.2.4",
     "load-script": "^1.0.0",
@@ -43,6 +45,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
